# cpp-helper-libs

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
cmake/: CompareBenchmarks.cmake  Coverage.cmake  ProjectOptions.cmake  RunCiLocal.cmake  RunCpd.cmake  RunFormat.cmake  RunPerfProfile.cmake  RunPerfStatBenchmarks.cmake  Sanitizers.cmake  StaticAnalysis.cmake  SummarizeBenchmarkHotspots.cmake  Warnings.cmake
docs/: README.md  architecture.md  build-and-test.md  contributing.md  dubins-path-finding.md  linear-algebra.md  path-finding.md  performance-benchmarks.md  quantities.md  spherical-geometry.md  style-guide.md
libs/: CMakeLists.txt
libs/dubins_path_finding/: CMakeLists.txt
libs/dubins_path_finding/include/cpp_helper_libs/dubins_path_finding/: dubins_path_finding.hpp  spherical_dubins_planner.hpp
libs/dubins_path_finding/src/: spherical_dubins_planner.cpp
libs/dubins_path_finding/tests/: CMakeLists.txt  spherical_dubins_planner_test.cpp
libs/linear_algebra/: CMakeLists.txt
libs/linear_algebra/include/cpp_helper_libs/linear_algebra/: decompositions.hpp  linear_algebra.hpp  matrix.hpp  matrix3.hpp  unit_vector3.hpp  vector3.hpp
libs/linear_algebra/src/: decompositions.cpp  matrix.cpp  matrix3.cpp  unit_vector3.cpp  vector3.cpp
libs/linear_algebra/tests/: CMakeLists.txt  decompositions_test.cpp  linear_algebra_test.cpp  matrix3_test.cpp  matrix_test.cpp  test_helpers.hpp  unit_vector3_test.cpp  vector3_test.cpp
libs/math/: CMakeLists.txt
libs/math/include/cpp_helper_libs/math/: arithmetic.hpp
libs/math/src/: arithmetic.cpp
libs/math/tests/: CMakeLists.txt  arithmetic_test.cpp
libs/path_finding/: CMakeLists.txt
libs/path_finding/include/cpp_helper_libs/path_finding/: a_star.hpp  path_finding.hpp
libs/path_finding/src/: a_star.cpp
libs/path_finding/tests/: CMakeLists.txt  a_star_test.cpp
libs/quantities/: CMakeLists.txt
libs/quantities/include/cpp_helper_libs/quantities/: acceleration.hpp  angle.hpp  force.hpp  length.hpp  mass.hpp  quantities.hpp  quantity_base.hpp  speed.hpp  time.hpp
libs/quantities/src/: acceleration.cpp  angle.cpp  force.cpp  length.cpp  mass.cpp  quantity_conversion_common.hpp  speed.cpp  time.cpp
libs/quantities/tests/: CMakeLists.txt  acceleration_test.cpp  angle_test.cpp  force_test.cpp  length_test.cpp  mass_test.cpp  quantities_test.cpp  speed_test.cpp  test_helpers.hpp  time_test.cpp
libs/spherical_geometry/: CMakeLists.txt
libs/spherical_geometry/benchmarks/: CMakeLists.txt  spherical_geometry_benchmark.cpp
libs/spherical_geometry/include/cpp_helper_libs/spherical_geometry/: coordinate.hpp  intersection.hpp  major_arc.hpp  minor_arc.hpp  small_arc.hpp  spherical_circle.hpp  spherical_curve.hpp  spherical_ellipse.hpp  spherical_geometry.hpp  spherical_polygon.hpp  spherical_ray.hpp  spherical_shape.hpp  zero_length_curve.hpp
libs/spherical_geometry/include/cpp_helper_libs/spherical_geometry/detail/: policy_shape_facade.hpp
libs/spherical_geometry/src/: coordinate.cpp  great_circle_arc_common.hpp  intersection.cpp  major_arc.cpp  minor_arc.cpp  small_arc.cpp  spherical_circle.cpp  spherical_curve.cpp  spherical_ellipse.cpp  spherical_internal.cpp  spherical_internal.hpp  spherical_polygon.cpp  spherical_ray.cpp  zero_length_curve.cpp
libs/spherical_geometry/tests/: CMakeLists.txt  arc_factory_test.cpp  coordinate_test.cpp  intersection_test.cpp  spherical_curve_test.cpp  spherical_internal_test.cpp  spherical_ray_test.cpp  spherical_shape_test.cpp  zero_length_curve_test.cpp
scripts/: check-format-cpp.sh  format-cpp.sh  run-ci-local.sh
tests/: CMakeLists.txt
tests/data/benchmarks/: baseline.json  candidate-fail.json  candidate-pass.json
tests/smoke/: project_smoke_shared_test.cpp  project_smoke_test.cpp
